@@ -70,7 +70,7 @@ namespace KGySoft.Drawing.UnitTests
             string dir = Path.Combine(Files.GetExecutingPath(), "TestResults");
             if (!Directory.Exists(dir))
                 Directory.CreateDirectory(dir);
-            string fileName = Path.Combine(dir, $"{testName}_{(iconName == null ? null : "_")}.{DateTime.Now:yyyyMMddHHmmssffff}.ico");
+            string fileName = Path.Combine(dir, $"{testName}{(iconName == null ? null : $"_{iconName}")}.{DateTime.Now:yyyyMMddHHmmssffff}.ico");
             using (var fs = File.Create(fileName))
                 icon.SaveAsIcon(fs);
         }
@@ -84,7 +84,7 @@ namespace KGySoft.Drawing.UnitTests
             if (!Directory.Exists(dir))
                 Directory.CreateDirectory(dir);
 
-            string fileName = Path.Combine(dir, $"{testName}{(imageName == null ? null : "_")}{imageName}.{DateTime.Now:yyyyMMddHHmmssffff}");
+            string fileName = Path.Combine(dir, $"{testName}{(imageName == null ? null : $"_{imageName}")}{imageName}.{DateTime.Now:yyyyMMddHHmmssffff}");
             ImageCodecInfo encoder = null;
             if (origFormat)
                 encoder = ImageCodecInfo.GetImageEncoders().FirstOrDefault(e => e.FormatID == image.RawFormat.Guid);
